src/style/index.scss
$landing-color-primary: $color-hack-red;
$landing-color-border: $color-hack-black-5;
$landing-color-dark-bg: $color-hack-black-5;

#index {
  overflow-x: hidden;
  
  .hero {
    min-height: 100vh;
    position: relative;

    @include page-width;
  }

  .hero__copy {
    padding-top: 16rem;
  }

  .hero__heading {
    font-size: 3.6rem;
    text-align: center;
    margin: auto;
    padding-bottom: 2rem;

    @include media-query($sm-up) {
      text-align: left;
      margin: inherit;
      font-size: 4.8rem;
      width: 48rem;
    }
  }

  .hero__subheading {
    font-size: 1.4rem;
    font-weight: 400;
    text-align: center;
    padding-bottom: 1rem;

    @include media-query($sm-up) {
      font-size: 1.8rem;
      text-align: left;
    }
  }

  .hero__email {
    font-size: 1rem;
    font-weight: 400;
    text-align: center;
    margin-bottom: 1rem;

    @include media-query($sm-up) {
      font-size: 1.4rem;
      text-align: left;
    }
  }

  .hero__clouds {
    position: absolute;
    top: 10%;
    right: 0;
    width: 80rem;
    z-index: -1;
  }

  .hero__buildings {
    position: absolute;
    left: 10%;
    bottom: 5%;
    width: 80%;
    z-index: -1;

    @media screen and (max-height: 36rem) {
      display: none;
    }
  }

  .hero__bus {
    position: absolute;
    left: 120%;
    bottom: 4%;
    width: 10%;

    @media screen and (max-height: 36rem) {
      display: none;
    }
  }

  .hero__plane-path {
    position: absolute;
    top: -30%;
    left: 50%;
  }

  #motion-path {
    position: relative;
  }

  .hero__plane {
    position: absolute;
    top: -30%;
    left: 50%;
    width: 5rem;
    height: 5rem;
  }

  .intro {
    background-color: $landing-color-dark-bg;
    position: relative;
    padding: 16rem 0 10vw;

    &::before {
      display: block;
      position: absolute;
      top: -350px;
      content: " ";
      width: 100%;
      height: 400px;
      background-image: url("/static/hero-skyline.svg");
      background-size: 1440px;
      z-index: -2;
    }

    &::after {
      display: block;
      position: absolute;
      content: " ";
      bottom: -30vw;
      width: 100%;
      height: 50vw;
      background-image: url("/static/info-plateau.svg");
      background-size: contain;
      z-index: 2;
    }
  }

  .intro__content {
    @include page-width;
    @include media-query($md-up) {
      display: flex;
    }
  }

  .intro__heading {
    font-size: 2.8rem;
  }

  .intro__image {
    max-width: 100%;
    height: auto;
  }
  
  /*--  FAQ-SECTION  --*/

  section.faq{
    align-content: center;
  }
  
  .faq__container {
    // padding-top: 40rem;
    padding-bottom: 16rem;
    max-width: 88rem;
    text-align: center;
    margin: auto;
  }

  .faq_jump-to{
    padding-top:5rem;
  }
  
  .faq__flex-container{
    display: flex;
    justify-content: center;
    padding-top: 75px;
    flex-wrap: wrap;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    @include media-query(814px) {
      display: flex;
      justify-content: center;
      padding-top: 75px;
      flex-wrap: wrap;
    }
  }

  .faq__left-column{
    width: 40rem;  
    text-align: initial;
    @include media-query(875px) {
      padding-right: 1.5rem;
    }
  }

  .faq__right-column{
    width: 40rem;
    text-align: initial;
    @include media-query(875px) {
      padding-left: 1.5rem;
    }
  }

  .accordion__title {
    position: relative;
    display: flex;
    flex-direction: column;
    width: 80%;
    padding: 1rem .5rem 1rem 1rem;
    color: $color-hack-black-80;
      &:hover {
        cursor: pointer;
        color: $global-color-primary;
      }
      &.active {
        color: $global-color-primary;
      }   
  }
  
  .accordion__item {
    background-color:$color-hack-black-5;
    box-shadow: 0px 2px 2px #E9E9E9;
    border-radius: 4px;
    margin-bottom: 3rem;
    position: relative;

    &:after {
      font-weight: 900;
      content: "+";
      position: absolute;
      float: right;
      top: 1.1rem;
      right: 1.1rem;
      font-size: 1.5rem;
      color: $color-hack-black-80;
      
    }
    &.active {
      &:after {
        font-weight: 900;
        font-size: 1.5rem;
        content: '-';
        color: $global-color-primary;
      }
    }
    &:hover {
      &:after {
        cursor: pointer;
        color: $global-color-primary;
      }
    }
  }
  
  .accordion__content {
    opacity: 0;
    padding: 0 1rem;
    max-height: 0;
    overflow: hidden;
    clear: both;
    // opacity: 1;
    // -webkit-transition: all 0.2s ease 0.15s;
    // -o-transition: all 0.2s ease 0.15s;
    transition: height 0.10s ease-in-out;
    // active content styling
      &.active {
        opacity: 1;
        // padding: 1rem;
        max-height: 100%;
        -o-transition: all 0.2s ease 0.15s;
        transition: all 0.2s ease 0.15s;
      }

      a, a:active {
        color: $global-color-primary;
      }

      a:hover {
        color: $color-hack-black-80;
      }
  }

  .faq__wrapper {
    position: relative;
    
  }
  .faq__image-left {
    display: none;

    @include media-query($lg-up) {
      display: initial;
      position: absolute;
      top: 40%;
      left: 0;
      width: 23vw;
      height: auto;
    }
  }
  .faq__image-right {
    display: none;

    @include media-query($lg-up) {
      display: initial;
      position: absolute;
      top: 30%;
      right: 0%;
      width: 25vw;
      height: auto;
    }
  }
  /*--  //FAQ-SECTION  --*/

  /*--  SPONSOR-SECTION  --*/
  .sponsor {
    margin-top: 50rem;
    margin-bottom: 12rem;
  }

  .sponsor__heading {
    font-size: 2.8rem;
  }

  .sponsor-list {
    margin-bottom: 16rem;
  }

  .sponsor-list__heading {
    text-align: center;
    // font-size: 2.8rem;
    margin-bottom: 6rem;
  }

  .sponsor-list__tier {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin-bottom: .5rem;
  }

  .sponsor-list__logo-wrapper {
    //text-align: center;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    align-content: center;
    padding: 1em 4rem;
    a {
      max-width: 100%;
      max-height: 100%;
    }
  }

  .sponsor-list__logo-wrapper--giga {
    //height: 150px;
    //width: 400px;
    flex-basis: 70%;
    align-self: center;
    padding: 2%;
  }

  .sponsor-list__logo-wrapper--mega {
    //height: 150px;
    //width: 200px;
    flex-basis: 45%;
    align-self: center;
    padding: 2%;
  }

  .sponsor-list__logo-wrapper--kilo {
    //height: 50px;
    //width: 200px;
    flex-basis: 21%;
    align-self: center;
    padding: 2%;
  }

  .sponsor-list__logo-wrapper--byte {
    //height: 35px;
    //width: 200px;
    flex-basis: 18%;
    align-self: center;
    padding: 1%;
  }

  .sponsor-list__logo-wrapper--inkind {
    //height: 35px;
    //width: 200px;
    flex-basis: 7%;
    align-self: center;
    padding: 1.5%;
  }
  
  .sponsor-list__logo {
    max-width: 100%;
    max-height: 100%;
    transition: 1s;

    &:hover{
      transform: scale(1.1);
    }
  }

  .sponsor-list__sponsor {
    flex: 1 0 50%;
    object-fit: contain;
    max-height: 10rem;
    margin-bottom: 5rem;
  }
  /*--  //SPONSOR-SECTION  --*/
  
  /*--  FOOTER-SECTION  --*/
  .footer {
    padding: 2rem;
    border-top: 2px solid $landing-color-primary;
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  .footer__links {
    margin: 0;
    padding: 0;

    li {
      margin-left: 1rem;
      display: inline;
    }
  }

  .footer__links-socials {
    float: right;
    list-style: none;
    padding: 0 0 0 1rem;
    margin: 0;
  }

  .footer__links-social {
    vertical-align: middle;
    vertical-align: -webkit-baseline-middle;
    margin-right: 2rem;
    text-decoration: none;
  }

  .footer__link {
    color: $color-hack-black-60;

    &:focus,
    &:hover {
      text-decoration: none;
    }
  }
  /*--  //FOOTER-SECTION  --*/
}

